# flux-legacy

./: .gitmodules  Cargo.toml
src/: chat.rs  lib.rs  macros.rs  main.rs  mc.rs  modules.rs  nbt.rs  prelude.rs  snbt.rs  utils.rs
src/lib/: macros.rs  mod.rs  modules.rs  nbt.rs  snbt.rs  utils.rs
src/mc/: block.rs  commands.rs  data.rs  enchant.rs  entity.rs  item.rs  material.rs  world.rs
src/mc/context/: general.rs
src/mc/entity/: effect.rs  meta.rs  model.rs  types.rs
src/modules/: context.rs  functions.rs
