[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libflux"
edition = "2021"
path = "src/lib/mod.rs"

[[bin]]
name = "flux-cli"
edition = "2021"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.56"
byteorder = "1.4.3"
toml = "0.5.8"
serde_json = "1.0.79"
colored = "2.0.0"
libz-sys = "1.1.5"
tar = "0.4.38"

[dependencies.tokio]
version = "1.17.0"
features = [ "fs", "rt-multi-thread", "io-util", "macros" ]

[dependencies.flate2]
version = "1.0.22"
features = [ "zlib-ng-compat" ]
default-features = false

[dependencies.serde]
version = "1.0.136"
features = [ "derive" ]
