[package]
name = "flux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libflux"
edition = "2021"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
byteorder = "1.4.3"
toml = "0.5.8"
serde_json = "1.0.79"
colored = "2.0.0"
convert_case = "0.5.0"
serde_with = "1.12.0"

[dependencies.tokio]
version = "1.17.0"
features = [ "fs", "rt-multi-thread", "io-util", "macros" ]

[dependencies.serde]
version = "1.0.136"
features = [ "derive" ]
